# disaster-recovery-project_NLP

./: README.md  mkdocs.yml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.cfg
app/: run.py
data/: process_data.py
models/: train_classifier.py
notebooks/: ETL Pipeline Preparation.ipynb  ML Pipeline Preparation.ipynb
