[metadata]
name = disaster-response
version = 0.0.1
url = https://github.com/pschropp/disaster-recovery-project_NLP
project_urls =
    https://github.com/pschropp/disaster-recovery-project_NLP
author = passl
description = disasaster response
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8

[options.packages.find]
where=src